After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782172 - Meson missing options to set package name and origin
Meson missing options to set package name and origin
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
1.12.x
Other All
: Normal minor
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-04 18:19 UTC by Jan Alexander Steffens (heftig)
Modified: 2017-05-20 14:19 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jan Alexander Steffens (heftig) 2017-05-04 18:19:53 UTC
The autoconf options --with-package-name and --with-package-origin have no equivalent in Meson. The default values are hardcoded in /meson.build.

GStreamer 1.12.0
Comment 1 Tim-Philipp Müller 2017-05-13 17:33:37 UTC
GStreamer core:

commit 4341bd0ba38edf049344b858ce4d6069fa4c1c00
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Sat May 13 18:30:27 2017 +0100

    meson: add options to set package name and origin
    
    https://bugzilla.gnome.org/show_bug.cgi?id=782172


Other modules to follow.
Comment 2 Tim-Philipp Müller 2017-05-20 14:19:27 UTC
Fixed in other modules too.