meson: add options to set package name and origin

https://bugzilla.gnome.org/show_bug.cgi?id=782172